[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-converter-toolkit"
version = "0.1.0"
description = "Text and Markdown-style content to LaTeX converter with small utility helpers."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "hope-sun123"}
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "pyperclip>=1.8",
  "requests>=2.31"
]

[project.scripts]
latex-converter = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["ultility_toolkit*"]
